# eye-tracking

./: .gitignore
matlab_src/: AxisAngleToQuaternion.m  CircularPupilFinder.m  EqualizeRGBImage.m  EstimatePupilCenterFaceCoordinates.m  FeatureDetectionChain.m  LocatePupilCenter.m  PupilCenterLocalization.m  UniformLightEuqualizeRGBImage.m  addAdditionalFeatures.m  doProcrustes.m  doSVM.m  drawFeatures.m  dtwBasedTest.m  extractPupilTrackerData.m  eyepoint.m  getMatlabWindowPosition.m  optimalSubplot.m  parsePupilTrackerData.m  save2pdf.m  worldToSubscript.m
matlab_src/@kde/: adjustBW.mexmaci64  adjustPoints.mexmaci64  adjustWeights.mexmaci64  evaluate.m  knn.mexmaci64  llGrad.mexmaci64
matlab_src/@kde/private/: BallTree.mexmaci64  BallTreeDensity.mexmaci64  DualTree.mexmaci64  entropyGradISE.mexmaci64  iseEpsilon.mexmaci64  prodSampleEpsilon.mexmaci64  prodSampleExact.mexmaci64  prodSampleGibbs1.mexmaci64  (+4 more)
matlab_src/IMUProcessing/: AnimateTrajectory.m  AttitudeByGyro2.m  AttitudeEKF.m  DeviceMotionAxesShift.m  attitudeByAccMag.m  attitudeByGyro.m  attitudeEKF2.m  calculation3.m  dataAlignment2.m  portal.m  sensor.txt  sensorTextReadFromDisk.m
matlab_src/Mobisys2015/: 2DFacialModelExtraction.mat  2dvs3d.mat  ASMFaceTrackingError.eps  Best2DFace.ChenShuaiYu.mat  Best2DFace.ChenYang.mat  Best2DFace.George.mat  Best2DFace.WeiYao.mat  DrawASMFaceTrackingError.m  DrawBest2DFaces.m  DrawBest2DFacialModel.m  DrawFacialModelAccuracy.m  DrawFasePoseAccuracyFigures.m  DrawGazingModelAccuracies.m  DrawIrisExtractionFigures.m  DrawPupilLocalizationComparison.m  DrawPupilLocalizationHorizonVerticalDifference.m  DrawRangingFigure1.m  DrawReprojectionErrorGraphs.m  DrawSpinSSamples.m  DrawVisionCalibrationGraphs.m  FacePoseAccuracies.mat  GenerateRangingFigure2.m  GenerateSpinSSamples.m  HeightScanReprojectionErrorGraphs.mat  IrisSegmentation.mat  LowerHalfCircularSegmentSpinS.mat  LuminanceUniformization.mat  MiddleCircularSegmentSpinS.mat  PupilLocailzationComparison.m  RangeErrorConduction.m  ReprojectionErrorCombine.eps  ReprojectionErrorCombineG.eps  ReprojectionErrorMean.eps  ReprojectionErrorStd.eps  ScanViewZLayer.m  SpinSLowerCircularBase.eps  SpinSLowerCircularResult.eps  SpinSMiddleCircularBase.eps  SpinSMiddleCircularResult.eps  SpinSSquareBase.eps  (+9 more)
matlab_src/fusing/: ExtractMostFrontalFace.m  ExtractOptimalNoseAndPhiltrumHeightFromVideoTests.m  FindOptimalFaceModel.m  GapAnalysisBasedOnAllData.m  GazeEstimation.m  OptimalFaceModelByScanningAllTests.m  ParseFusedData.m  ParseFusedDataWithFileNames.m  ParseFusedDataWithSensorData.m  WriteScanSequence.m  coloredScatter.m  facial2dmodel.txt  fusedDataParsing.m  show2DAxesDirection.m  show3DAxesDirection.m  viewTvec.m
refman.pages/Metadata/: DocumentIdentifier  Properties.plist
src/: CMakeLists.txt  Trajectory_data.cpp  Trajectory_data.h
src/asm_face/: CMakeLists.txt  face_detector.cpp  face_detector.hpp  face_tracker.cpp  face_tracker.hpp  ft.cpp  ft.hpp  ft_data.cpp  ft_data.hpp  patch_model.cpp  patch_model.hpp  shape_model.cpp
src/asm_face/exe/: CMakeLists.txt  annotate.cpp  train_face_detector.cpp  train_face_tracker.cpp  train_patch_model.cpp  train_shape_model.cpp  visualize_annotations.cpp  visualize_face_detector.cpp  visualize_face_tracker.cpp  visualize_patch_model.cpp  visualize_shape_model.cpp
src/jzp_lib/: ASEF.cpp  CMakeLists.txt  EyeLike.h  GraphUtils.cpp  LKTracker.cpp  jzplib_all.h  jzplib_bwOps.cpp  jzplib_bwOps.h  jzplib_camera.cpp  jzplib_camera.h  jzplib_detections.cpp  jzplib_detections.h  jzplib_draw.cpp  jzplib_draw.h  jzplib_geom.cpp  jzplib_geom.h  jzplib_img.cpp  jzplib_img.h  jzplib_utils.cpp  jzplib_utils.h  skinColorDetection.cpp  skinColorDetection.h
src/opencv_hotshots/ft/: face_detector.cpp  face_detector.hpp  face_tracker.cpp  face_tracker.hpp  ft.cpp  ft.hpp  ft_data.cpp  ft_data.hpp  patch_model.cpp  patch_model.hpp  shape_model.cpp
src/opencv_hotshots/ft/exe/: CMakeLists.txt  annotate.cpp  train_face_detector.cpp  train_face_tracker.cpp  train_patch_model.cpp  train_shape_model.cpp  visualize_annotations.cpp  visualize_face_detector.cpp  visualize_face_tracker.cpp  visualize_patch_model.cpp  visualize_shape_model.cpp
src/playground/: CMakeLists.txt  playground.cpp  playground.h
src/portal/: CMakeLists.txt  Portal.cpp  Portal.h
src/pupil_tracker/: ASMGazeTracker.cpp  ASMGazeTracker.h  ASMPoseEstimation.cpp  ASMPoseEstimation.h  ASMPupilTracker.cpp  ASMPupilTracker.h  AnnotationFlip.cpp  CMakeLists.txt  Camcorder.cpp  Camcorder.h  CameraCalibrator.cpp  CurveDrawer.cpp  CurveGazingRecorder.cpp  HeadPoseAdviser.cpp  HeadPoseEstimation.cpp  PolyFitCurveDrawer.cpp  PupilTracker.cpp  Scan3DFaceModel.cpp  SymmetryDetectionTest.cpp  SymmetryDetectionTest.h  deprecated_code.h  pupil_tracker.cpp  video_recorder.cpp
src/resources/: isightcameraparams.yaml  runportal.sh
